syntax = "proto3";

option csharp_namespace = "HotelServer.Client";

package Client;

// Общие сообщения
message Empty {}

message Ack {
    bool success = 1;
    string message = 2;
}

// Клиенты
message ClientRequest {
    string lastName = 1;
    string firstName = 2;
    string middleName = 3;
    string phone = 4;
    string passportSeries = 5;
    string passportNumber = 6;
    string email = 7;
}

message ClientResponse {
    int32 id = 1;
    string lastName = 2;
    string firstName = 3;
    string middleName = 4;
    string phone = 5;
    string passportSeries = 6;
    string passportNumber = 7;
    string email = 8;
    string message = 9;
    bool success = 10;
    string fullName = 11;
    string passport = 12;
}

message ClientListResponse {
    repeated ClientResponse clients = 1;
}

message GetClientRequest {
    int32 id = 1;
}

service ClientService {
    rpc AddClient (ClientRequest) returns (ClientResponse);
    rpc GetAllClients (Empty) returns (ClientListResponse);
    rpc GetClient (GetClientRequest) returns (ClientResponse);
}
